@@ -1,6 +1,8 @@
 0.3.1 2026-02-04
     - Introduce hyphenated abbreviations in german tokenizer.
     - Support Wikipedia templates.
+    - Introduced multiple gender forms for nouns
+      in german tokenizer.
 
 0.2.2 2023-09-06
     - Fix behaviour for end of text character positions
